Convert anonymous classes to lambdas and Arrays.asList() to List.of()
Additional SonarCloud fixes discovered after the 1.17.1-SNAPSHOT
maintainability/reliability cleanup, found on main post-merge:

- Anonymous classes on functional interfaces (java:S9357)
  WeatherValidatorTest used anonymous inner class implementations of
  the single-method WeatherValidator<T> functional interface in two
  places. Converted both to lambda expressions. This rule was not
  previously present in SonarCloud's rule set when the file was last
  modified 9 months ago; it retroactively surfaced once a full
  analysis ran again after the SONAR_TOKEN fix earlier in this
  session.

- Arrays.asList() with a single argument
  WeatherValidatorTest used Arrays.asList("...") with a single string
  literal argument in 5 places to construct validation error lists.
  Replaced with List.of("..."), the more idiomatic Java 9+ construct
  for small immutable lists. Arrays.asList() returns a fixed-size but
  still partially-mutable (via set()) list, whereas List.of() is
  fully immutable and disallows null elements, better matching the
  intended use as a fixed validation-error list.

Bumped noakweather-platform and all submodules from 1.17.1-SNAPSHOT
to 1.17.2-SNAPSHOT (patch release; noakweather-legacy remains at
0.0.5, untouched). Updated CHANGELOG.md accordingly.

Testing: full suite passing (0 failures, 0 errors) after all 7
changes, confirming no downstream code depended on the mutable or
nullable semantics of the original Arrays.asList() calls or
anonymous class instances.